cloud 브랜치 전체 파일 반영: 모든 파일 손실 없이 main에 동기화